# realsense_description

./: CMakeLists.txt  README.md  package.xml
gazebo_model/: model.config  model.sdf
launch/: example_d435.launch
rviz/: example_d435.rviz
urdf/: example_d435.urdf.xacro  realsense_d435.urdf.xacro
world/: box.world
